--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ REACT_APP_API= http://localhost:8000
 BRAINTREE_MERCHANT_ID=gpxp3n7dyz5757b6
 BRAINTREE_PUBLIC_KEY=z89cvd5qcckmkxpp
 BRAINTREE_PRIVATE_KEY=f7bcdf4d5307b6db9aceb8a8a5695a9f
+GOOGLE_CLIENT_ID= 464158441246-f6mmeqdpgavjvv47b5sl6aljfo0f18tv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET= 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
+SESSION_SECRET= abcdx67jf4uvhgcUo09cf75$vhhfghtverqrasd738472308rgkjhbfhb789ghu23rsa
