--- a/client/src/.env
+++ b/client/src/.env
@@ -1,1 +1,3 @@
 REACT_APP_API = http://localhost:8000
+GOOGLE_CLIENT_ID= 464158441246-f6mmeqdpgavjvv47b5sl6aljfo0f18tv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET= 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
