--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "bcrypt": "^5.1.1",
     "braintree": "^3.23.0",
     "braintree-web-drop-in-react": "^1.2.1",
@@ -22,12 +23,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-formidable": "^1.2.0",
+    "express-session": "^1.18.1",
+    "google-auth-library": "^9.14.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "node": "^21.7.1",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "portfinder": "^1.0.32",
     "react-router-dom": "^6.22.3",
     "slugify": "^1.6.6"
